[gd_scene load_steps=12 format=3 uid="uid://cqn24nau6yrw4"]

[ext_resource type="Script" uid="uid://c7hnaelk11lbr" path="res://scripts/gun.gd" id="1_a2qas"]
[ext_resource type="Texture2D" uid="uid://ciln2eopeifki" path="res://assets/Weapons/2 Guns/6_1.png" id="1_mne8u"]
[ext_resource type="Texture2D" uid="uid://bgpxpe6m0jkri" path="res://assets/Weapons/4 Shoot_effects/6_1.png" id="3_eihxs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gtcm8"]
radius = 150.0

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ncy"]
atlas = ExtResource("3_eihxs")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn6rb"]
atlas = ExtResource("3_eihxs")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2f1d"]
atlas = ExtResource("3_eihxs")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfsv5"]
atlas = ExtResource("3_eihxs")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5mqd"]
atlas = ExtResource("3_eihxs")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w5sc"]
atlas = ExtResource("3_eihxs")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_oxc3a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ncy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn6rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2f1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfsv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5mqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w5sc")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Fire",
"speed": 35.0
}, {
"frames": [],
"loop": false,
"name": &"None",
"speed": 10.0
}]

[node name="Gun" type="Area2D"]
position = Vector2(-1, 0)
collision_mask = 2
script = ExtResource("1_a2qas")

[node name="Gun_Range" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_gtcm8")
debug_color = Color(0.182535, 0.841612, 0, 0.42)

[node name="Gun_Pivot" type="Marker2D" parent="."]

[node name="White_Red_Gun" type="Sprite2D" parent="Gun_Pivot"]
unique_name_in_owner = true
position = Vector2(24, -4)
texture = ExtResource("1_mne8u")

[node name="Shooting_Point" type="Marker2D" parent="Gun_Pivot/White_Red_Gun"]
unique_name_in_owner = true
position = Vector2(15, -2)

[node name="Shoot_Effect" type="AnimatedSprite2D" parent="Gun_Pivot/White_Red_Gun/Shooting_Point"]
unique_name_in_owner = true
position = Vector2(24.0836, 0.215385)
sprite_frames = SubResource("SpriteFrames_oxc3a")
animation = &"Fire"
autoplay = "None"
frame = 6
frame_progress = 1.0

[node name="Shooting_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Shooting_Timer" to="." method="_on_timer_timeout"]
